@@ -25,7 +25,7 @@ High level features:
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fixie" Version="2.0.2" />
+    <PackageReference Include="Fixie" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
