@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="Fixie" Version="2.0.2" />
+    <PackageReference Include="Fixie" Version="2.0.3" />
     <DotNetCliToolReference Include="Fixie.Console" Version="2.0.0" />
   </ItemGroup>
 
